--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DubHaus/htmldiff-js.git"
+    "url": "git+https://github.com/deadusr/htmldiff-js.git"
   },
   "exports": {
     ".": {
@@ -36,9 +36,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/DubHaus/htmldiff-js/issues"
+    "url": "https://github.com/deadusr/htmldiff-js/issues"
   },
-  "homepage": "https://github.com/DubHaus/htmldiff-js#readme",
+  "homepage": "https://github.com/deadusr/htmldiff-js#readme",
   "devDependencies": {
     "@types/jest": "^29.2.3",
     "jest": "^29.3.1",
