--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 		"lib/**/*"
 	],
 	"scripts": {
-		"clean": "rm -rf ./lib",
 		"build": "npm run clean && npm run build:esm && npm run build:cjs",
-		"build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
 		"build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
+		"build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
+		"clean": "rm -rf ./lib",
+		"format": "prettier --write .",
 		"prepack": "npm run build",
 		"test": "jest",
 		"test:watch": "jest --watch"
@@ -43,8 +44,12 @@
 	},
 	"homepage": "https://github.com/ericmakesapps/diff-htmls#readme",
 	"devDependencies": {
+		"@prettier/plugin-xml": "^3.4.1",
+		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/jest": "^29.2.3",
 		"jest": "^29.3.1",
+		"prettier": "^3.5.3",
+		"prettier-plugin-package": "^1.4.0",
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.3"
